# crystal-geometry

./: .gitignore  README.md  pyproject.toml  variance.ipynb
models/chamfered-plate/: chamfered-plate-45deg-esr-shell-Body.stl  chamfered-plate-45deg-esr-shell.FCStd  chamfered-plate-45deg.FCStd
models/chamfered-plates/: chamfered-plate-45deg-Body.stl  chamfered-plate-45deg-esr-shell-Body.stl  chamfered-plate-45deg.FCStd
models/chamfered-triangular-prism/: chamfered-triangular-prism-6sipm-Body.stl  chamfered-triangular-prism-6sipm-esr-shell-Body.stl  chamfered-triangular-prism-6sipm-esr-shell.FCStd  chamfered-triangular-prism-6sipm.FCStd  chamfered-triangular-prism-Body.stl  chamfered-triangular-prism-esr-shell-Body.stl  chamfered-triangular-prism-esr-shell.FCStd  chamfered-triangular-prism.FCStd
models/chamfered-triangular-prisms/: chamfered-triangular-prism-6sipm-Body.stl  chamfered-triangular-prism-6sipm-esr-shell-Body.stl  chamfered-triangular-prism-6sipm-esr-shell.FCStd  chamfered-triangular-prism-6sipm.FCStd  chamfered-triangular-prism-Body.stl  chamfered-triangular-prism-esr-shell-Body.stl  chamfered-triangular-prism-esr-shell.FCStd  chamfered-triangular-prism.FCStd
models/doorstop/: doorstop-angled-Body.stl  doorstop-angled-esr-shell.FCStd  doorstop-angled.FCStd  doorstop-esr-shell-Body.stl
models/frustrum-scintillator/: frustrum-scintillator.FCStd
models/plates/: chamfered-plate-45deg-esr-shell.FCStd  plate.FCStd  (+2 more)
scintillator_tracer/: README.md  __init__.py  definitions.py  geometry_helpers.py  plot.mplstyle  plotting.py  processing.py  worlds.py
(+102 files in other folders)
